--- a/style.css
+++ b/style.css
@@ -104,9 +104,13 @@ li {
     font-size: 7vh;
     
   }
+  .para{
+    font-size: 3.5vw;
+    color: rgb(24, 23, 23);
+  }
   .todo-input {
     width: 100%;
-    height: 15vh;
+    height: 18vh;
     display: flex;
     flex-direction: column;
     gap: 0.4rem;
@@ -115,7 +119,8 @@ li {
     width: 100vw;
   }
   .todolists li {
-    height: 5vh;
+    height: 6vh;
+    padding: 0.2rem;
     border: 2px solid black;
 
   }
